docs/apache-airflow-providers-amazon/2.6.0/_sources/_api/airflow/providers/amazon/aws/operators/glue_crawler/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.operators.glue_crawler`
=============================================================

.. py:module:: airflow.providers.amazon.aws.operators.glue_crawler


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerOperator
   airflow.providers.amazon.aws.operators.glue_crawler.AwsGlueCrawlerOperator




.. py:class:: GlueCrawlerOperator(config, aws_conn_id='aws_default', poll_interval: int = 5, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Creates, updates and triggers an AWS Glue Crawler. AWS Glue Crawler is a serverless
   service that manages a catalog of metadata tables that contain the inferred
   schema, format and data types of data stores within the AWS cloud.

   :param config: Configurations for the AWS Glue crawler
   :type config: dict
   :param aws_conn_id: aws connection to use
   :type aws_conn_id: Optional[str]
   :param poll_interval: Time (in seconds) to wait between two consecutive calls to check crawler status
   :type poll_interval: Optional[int]

   .. py:attribute:: ui_color
      :annotation: = #ededed

      

   .. py:method:: hook(self) -> airflow.providers.amazon.aws.hooks.glue_crawler.GlueCrawlerHook

      Create and return an GlueCrawlerHook.


   .. py:method:: execute(self, context: airflow.utils.context.Context)

      Executes AWS Glue Crawler from Airflow

      :return: the name of the current glue crawler.



.. py:class:: AwsGlueCrawlerOperator(*args, **kwargs)

   Bases: :py:obj:`GlueCrawlerOperator`

   This operator is deprecated.
   Please use :class:`airflow.providers.amazon.aws.operators.glue_crawler.GlueCrawlerOperator`.


